--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@
         margin-top: 0rem !important;
     }
 
+    .username .active span{
+        font-size: 12px !important;
+    }
+
     .bio{
         margin-top: 1rem !important;     
       }
@@ -199,6 +203,7 @@ h6{
   
 
   
+
 
 
 
