--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     
     article{
         padding-bottom: 0rem !important;
+        min-height: 100% !important;
         margin-top: -2rem !important;
     }
 
@@ -203,6 +204,7 @@ h6{
   
 
   
+
 
 
 
