--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     }
     
     article{
-        padding-bottom: 0rem !important;
+        margin-bottom: 10rem !important;
         min-height: 100% !important;
         margin-top: -2rem !important;
     }
@@ -204,6 +204,7 @@ h6{
   
 
   
+
 
 
 
